syntax = "proto3";

package blobcast.storage.v1;

option go_package = "github.com/forma-dev/blobcast/pkg/proto/blobcast/storage/v1";

import "blobcast/storage/v1/chunk_reference.proto";
import "blobcast/storage/v1/compression_algorithm.proto";

message FileManifest {
  string manifest_version = 1;
  CompressionAlgorithm compression_algorithm = 2;
  repeated ChunkReference chunks = 3;
  string file_name = 4;
  string mime_type = 5;
  uint64 file_size = 6;
  bytes file_hash = 7;
}
